--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,3 +13,13 @@ body {
 a {
   text-decoration: none;
 }
+
+section#articles {
+  max-width: 1240px;
+  padding: 0 2rem;
+  margin: 4rem auto;
+
+  display: flex;
+  flex-direction: column;
+  gap: 46px;
+}
