--- a/src/components/Article/style.css
+++ b/src/components/Article/style.css
@@ -1,9 +1,3 @@
-article > img.image {
-  width: 100px;
-  height: 150px;
-  border-radius: 2px;
-}
-
 #article {
   display: flex;
   gap: 1rem;
@@ -30,4 +24,10 @@ p {
   font-size: 16px;
   font-weight: regular;
   text-align: justify;
+}
+
+#article img {
+  max-width: 350px;
+  max-height: 300px;
+  border-radius: 5px;
 }
